--- a/source/TinyRazorPages.Core/TinyRazorPages.Core.csproj
+++ b/source/TinyRazorPages.Core/TinyRazorPages.Core.csproj
@@ -5,7 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
     <PackageReference Include="EntityFramework" Version="6.4.4" />
+    <PackageReference Include="xunit" Version="2.4.1" />
   </ItemGroup>
 
 </Project>
