--- a/source/TinyConsole2.Classic/TinyConsole2.Classic.csproj
+++ b/source/TinyConsole2.Classic/TinyConsole2.Classic.csproj
@@ -49,5 +49,10 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="AutoMapper">
+      <Version>10.1.1</Version>
+    </PackageReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
