--- a/source/TinyRazorPages.Core/TinyRazorPages.Core.csproj
+++ b/source/TinyRazorPages.Core/TinyRazorPages.Core.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="xunit" Version="2.4.1" />
+  </ItemGroup>
+
 </Project>
