--- a/source/TinyConsole.Core/TinyConsole.Core.csproj
+++ b/source/TinyConsole.Core/TinyConsole.Core.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Automapper" Version="10.1.1" />
+  </ItemGroup>
+
 </Project>
