--- a/source/BigStar.ColorLib/BigStar.ColorLib.csproj
+++ b/source/BigStar.ColorLib/BigStar.ColorLib.csproj
@@ -4,8 +4,12 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <Version>0.7.0</Version>
-    <Company>BigStar Collectibles</Company>
+    <Company>Big Star Collectibles</Company>
     <PackageId>BigStarCollectibles.ColorLib</PackageId>
+    <Authors>Walt Ritscher</Authors>
+    <Product>ColorLib</Product>
+    <Copyright>Copyright info here (optional)</Copyright>
+    <Description>Internal library for Big Star Collectibles teams.  Work with HTML standard colors.  Includes a random color selector, a substitute color finder and a color family tree.</Description>
   </PropertyGroup>
 
   <ItemGroup>
