Change package version #

--- a/source/BigStar.ColorLib/BigStar.ColorLib.csproj
+++ b/source/BigStar.ColorLib/BigStar.ColorLib.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
-    <Version>0.7.0</Version>
+    <Version>0.7.0-experimental</Version>
     <Company>Big Star Collectibles</Company>
     <PackageId>BigStarCollectibles.ColorLib</PackageId>
     <Authors>Walt Ritscher</Authors>
